--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -41,6 +41,19 @@ ol {
 }
 
 .benefits-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+
+  /* column-gap: 20px;
+  row-gap: 40px; */
+
+  /* gap: 40px 20px; */
+
+  height: 400px;
+
   border: 1px solid #000000;
 }
 
@@ -48,3 +61,26 @@ ol {
   width: 300px;
   border: 1px solid tomato;
 }
+
+.benefits-list-item:first-child .benefits-list-title {
+  font-size: 24px;
+}
+
+.benefits-list-item-first {
+}
+
+.benefits-list-item-second {
+  align-self: center;
+}
+
+.benefits-list-item-third {
+  align-self: flex-end;
+}
+
+/* .benefits-list-item:not(:nth-child(3n)) {
+  margin-right: 20px;
+}
+
+.benefits-list-item:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 40px;
+} */
