--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,25 @@
 /* =============== Common Styles =============== */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 ul,
 ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style-type: none;
+}
+
+img {
+  display: block;
 }
 
 a {
@@ -31,9 +49,49 @@ body {
   text-transform: uppercase;
   color: #111111;
 }
+
+.container {
+  max-width: 1168px;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.section-paddings {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
 /* =============== /Common Styles =============== */
 
 /* =============== Header Styles =============== */
+
+.page-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  column-gap: 24px;
+}
+
 .site-logo {
   font-weight: 700;
   font-size: 18px;
@@ -43,11 +101,14 @@ body {
 }
 
 .menu-link {
+  display: block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: -0.02em;
   color: #111;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .menu-link:hover,
@@ -57,19 +118,47 @@ body {
 /* =============== /Header Styles =============== */
 
 /* =============== Hero Styles =============== */
+.hero {
+  max-width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 381px;
+  padding-bottom: 40px;
+  border-radius: 30px;
+  color: #ffffff;
+  background-color: #1e1823;
+}
+
+.hero-container {
+  padding-left: 56px;
+  padding-right: 56px;
+}
+
 .main-title {
+  width: 484px;
   font-size: 28px;
   font-weight: 500;
   line-height: 1.21;
   letter-spacing: -0.03em;
+  margin-bottom: 32px;
+}
+
+.hero-bottom-block {
+  display: flex;
+  align-items: center;
 }
 
 .buy-now-btn {
+  min-width: 144px;
+  height: 45px;
+  padding: 14px 40px;
+  border-radius: 100px;
   font-size: 14px;
   font-weight: 600;
   background-color: #fd9222;
   color: #ffffff;
   border: none;
+  margin-right: 14px;
 }
 
 .buy-now-btn:hover,
@@ -79,6 +168,12 @@ body {
 }
 
 .how-made-link {
+  min-width: 183px;
+  height: 45px;
+  padding: 14px 40px;
+  border: 1px solid #fff;
+  border-radius: 100px;
+
   font-size: 14px;
   font-weight: 600;
 }
@@ -86,6 +181,7 @@ body {
 .how-made-link:hover,
 .how-made-link:focus {
   color: #fd9222;
+  border-color: #fd9222;
 }
 
 .scroll-down-link {
@@ -93,6 +189,7 @@ body {
   font-weight: 500;
   line-height: 1.29;
   letter-spacing: -0.03em;
+  margin-left: auto;
 }
 
 .scroll-down-link:hover,
@@ -102,9 +199,31 @@ body {
 /* =============== /Hero Styles =============== */
 
 /* =============== Benefits Styles =============== */
+.benefits {
+  color: #ffffff;
+  background-color: #1e1823;
+  margin-top: 72px;
+  margin-bottom: 50px;
+}
+
+.benefits-container {
+  padding-left: 34px;
+  padding-right: 34px;
+}
+
+.benefits-list {
+  display: flex;
+  column-gap: 88px;
+}
+
+.benefits-list-item {
+  width: calc((100% - 2 * 88px) / 3);
+}
+
 .benefits-list-title {
   font-size: 18px;
   font-weight: 600;
+  margin-bottom: 18px;
 }
 
 .benefits-list-text {
@@ -115,12 +234,68 @@ body {
 /* =============== /Benefits Styles =============== */
 
 /* =============== Ingredients Styles =============== */
+.igredients-title {
+  width: 411px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 28px;
+}
+
 .ingredients-description {
+  width: 486px;
   font-size: 14px;
   line-height: 1.29;
   letter-spacing: -0.02em;
   text-align: center;
   color: #111111;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 54px;
+}
+
+.ingredients-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.ingredients-list-item {
+  width: calc((100% - 3 * 24px) / 4);
+  padding: 28px 32px;
+  border: 1px solid #fd9222;
+  border-radius: 15px;
+  background-color: #ffffff;
+}
+
+/* 
+4n + 1
+
+4 * 0 + 1 = 1;
+4 * 1 + 1 = 5;
+4 * 2 + 1 = 9;
+*/
+
+.ingredients-list-item:nth-child(4n + 1) {
+  background-color: #fd9222;
+  color: #ffffff;
+}
+
+/* 
+4n + 3
+
+4 * 0 + 3 = 3;
+4 * 1 + 3 = 7;
+4 * 2 + 3 = 11;
+*/
+
+.ingredients-list-item:nth-child(4n + 3) {
+  background-color: #1e1823;
+  border-color: #1e1823;
+  color: #ffffff;
+}
+
+.ingredients-list-img {
+  margin-bottom: 36px;
 }
 
 .ingredients-list-title {
@@ -134,10 +309,32 @@ body {
 
 /* =============== How made Styles =============== */
 .how-made-title {
+  margin-bottom: 50px;
+}
+
+.how-made-content-wrapper {
+  display: flex;
+  column-gap: 20px;
+}
+
+.how-made-text-content {
+  flex-grow: 1;
+  padding: 32px;
+  border-radius: 15px;
+  background-color: #ffffff;
+}
+
+.how-made-list {
+  padding-right: 26px;
+}
+
+.how-made-list-title {
+  width: 350px;
   font-size: 18px;
   font-weight: 600;
   line-height: 1.33;
   color: #111111;
+  margin-bottom: 32px;
 }
 
 .how-made-list-item {
@@ -146,15 +343,44 @@ body {
   letter-spacing: -0.02em;
   color: #111111;
 }
+
+.how-made-list-item:not(:last-child) {
+  margin-bottom: 24px;
+}
 /* =============== /How made Styles =============== */
 
 /* =============== Reviews Styles =============== */
+.reviews {
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.reviews-title {
+  margin-bottom: 50px;
+}
+
+.reviews-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 28px;
+  margin-bottom: 50px;
+}
+
+.reviews-list-item {
+  width: calc((100% - 2 * 28px) / 3);
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 15px;
+  background-color: #ffffff;
+  padding: 56px 24px 24px 24px;
+}
+
 .reviews-list-fullname {
   font-size: 18px;
   font-weight: 600;
   line-height: 1.33;
   text-align: center;
   color: #111111;
+  margin-bottom: 24px;
 }
 
 .reviews-list-text {
@@ -166,6 +392,15 @@ body {
 }
 
 .leave-review-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 222px;
+  border: 1px solid #fd9222;
+  border-radius: 100px;
+  padding: 14px 40px;
+  background-color: transparent;
+
   font-size: 18px;
   font-weight: 600;
   color: #111111;
@@ -179,22 +414,43 @@ body {
 /* =============== /Reviews Styles =============== */
 
 /* =============== Footer Styles =============== */
+.page-footer {
+  background-color: #1e1823;
+  color: #ffffff;
+}
+
+.page-footer-top-block {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
 .page-footer-title {
+  width: 300px;
   font-size: 28px;
   font-weight: 500;
   line-height: 1.21;
   letter-spacing: -0.02em;
 }
 
-.page-footer-left-side address {
+.page-footer-top-block {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.page-footer-top-block address {
   font-style: normal;
 }
 
-.contact-title {
+.contact-description {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.29;
-  text-align: center;
+  margin-bottom: 14px;
+}
+
+.contact-list-item:not(:last-child) {
+  margin-bottom: 4px;
 }
 
 .contact-list-link {
@@ -202,5 +458,19 @@ body {
   line-height: 1.29;
   letter-spacing: -0.02em;
   text-align: center;
+}
+
+.contact-list-link:hover,
+.contact-list-link:focus {
+  color: #fd9222;
+}
+
+.page-footer-bottom-block {
+  padding-top: 24px;
+  padding-bottom: 86px;
+}
+
+.page-footer-bottom-block .menu-link {
+  color: #ffffff;
 }
 /* =============== /Footer Styles =============== */
