--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,11 @@ body {
   border-radius: 30px;
   color: #ffffff;
   background-color: #1e1823;
-  background-image: linear-gradient(rgba(30, 24, 35, 0.4), rgba(30, 24, 35, 0.4)), url('../images/hero/bg.jpg');
+  background-image: linear-gradient(
+      rgba(30, 24, 35, 0.4),
+      rgba(30, 24, 35, 0.4)
+    ),
+    url('../images/hero/bg.jpg');
   background-size: cover;
 }
 
@@ -636,8 +640,11 @@ body {
 }
 
 .page-footer-bottom-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding-top: 24px;
-  padding-bottom: 86px;
+  padding-bottom: 50px;
 }
 
 .page-footer-bottom-block .menu-link {
@@ -649,4 +656,251 @@ body {
 .page-footer-bottom-block .menu-link:focus {
   color: #fd9222;
 }
+
+.subscribe-form {
+  display: flex;
+  column-gap: 8px;
+}
+
+.subscribe-form-field {
+  width: 313px;
+  height: 52px;
+  padding-left: 24px;
+  padding-right: 24px;
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 30px;
+  color: #ffffff;
+  background-color: transparent;
+  transition: border-color 250ms linear;
+}
+
+.subscribe-form-field::placeholder {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.subscribe-form-field:focus {
+  outline: transparent;
+  border-color: #fd9222;
+}
+
+.subscribe-form-submit-btn {
+  min-width: 137px;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 100px;
+  padding: 16px 20px;
+  border: none;
+  background-color: #fd9222;
+  color: #ffffff;
+  transition: background-color 250ms linear, color 250ms linear;
+}
+
+.subscribe-form-submit-btn:hover,
+.subscribe-form-submit-btn:focus {
+  background-color: #fcf1e0;
+  color: #fd9222;
+}
+
 /* =============== /Footer Styles =============== */
+
+/* =============== Backdrop Styles =============== */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 250ms linear;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 517px;
+  height: 95%;
+  max-height: 794px;
+  padding: 40px;
+  transform: translate(-50%, -50%);
+  border-radius: 15px;
+  background-color: #fafafa;
+  overflow-y: auto;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  padding: 0;
+  line-height: 0;
+  border: none;
+  background-color: transparent;
+  stroke: #111111;
+  transition: stroke 250ms linear;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  stroke: #fd9222;
+}
+/* =============== /Backdrop Styles =============== */
+
+/* =============== Review form Styles =============== */
+.modal-slogan {
+  max-width: 298px;
+  margin-bottom: 40px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: #111111;
+}
+
+.review-form-field-wrapper {
+  margin-bottom: 18px;
+}
+
+.review-form-field-label {
+  display: block;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+  margin-bottom: 8px;
+}
+
+.review-form-input-wrapper {
+  position: relative;
+}
+
+.review-form-field {
+  width: 100%;
+  height: 68px;
+  padding-left: 62px;
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  color: #111111;
+  border: 1px solid rgba(17, 17, 17, 0.05);
+  border-radius: 13px;
+  background-color: transparent;
+  transition: border-color 250ms linear;
+}
+
+.review-form-field:focus {
+  outline: transparent;
+  border-color: #fd9222;
+}
+
+.review-form-field-icon {
+  position: absolute;
+  top: 50%;
+  left: 24px;
+  transform: translateY(-50%);
+  fill: none;
+  stroke: #404040;
+  transition: stroke 250ms linear;
+}
+
+.review-form-field:focus + .review-form-field-icon {
+  stroke: #fd9222;
+}
+
+/* .review-form-input-wrapper:focus-within .review-form-field-icon {
+  stroke: #fd9222;
+} */
+
+.review-form-comment {
+  width: 100%;
+  height: 137px;
+  font-size: 18px;
+  letter-spacing: -0.02em;
+  color: #111111;
+  border: 1px solid rgba(17, 17, 17, 0.05);
+  border-radius: 13px;
+  padding: 22px 24px;
+  background-color: transparent;
+  resize: none;
+  transition: border-color 250ms linear;
+}
+
+.review-form-comment::placeholder {
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.review-form-comment:focus {
+  outline: transparent;
+  border-color: #fd9222;
+}
+
+.review-form-checkbox-wrapper {
+  margin-bottom: 40px;
+}
+
+.review-form-policy-label {
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.6);
+}
+
+.review-form-privacy-link {
+  text-decoration: underline;
+  color: #fd9222;
+}
+
+.review-form-custom-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border: 1px solid rgba(17, 17, 17, 0.14);
+  border-radius: 6px;
+  fill: transparent;
+  cursor: pointer;
+  margin-right: 12px;
+}
+
+.review-form-policy-checkbox:checked
+  + .review-form-policy-label
+  .review-form-custom-checkbox {
+  background-color: #fd9222;
+  border-color: #fd9222;
+  fill: #ffffff;
+}
+
+.review-form-policy-checkbox:focus
+  + .review-form-policy-label
+  .review-form-custom-checkbox {
+  outline: 2px solid rgba(0, 0, 255, 0.5);
+}
+
+.review-form-submit-btn {
+  min-width: 117px;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 100px;
+  padding: 14px 20px;
+  border: none;
+  background-color: #fd9222;
+  color: #ffffff;
+  transition: background-color 250ms linear, color 250ms linear;
+}
+
+.review-form-submit-btn:hover,
+.review-form-submit-btn:focus {
+  background-color: #fcf1e0;
+  color: #fd9222;
+}
+
+/* =============== /Review form Styles =============== */
