--- a/css/retina.css
+++ b/css/retina.css
@@ -28,6 +28,67 @@ body {
 */
 
 .hero {
+  max-width: 375px;
+  min-height: 211px;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-image: url('../images/retina/bg-mobile.jpg');
+  background-size: cover;
+}
+
+/* 
+screen
+0px - 767px
+2x +
+*/
+@media screen and (max-width: 767px) and (min-resolution: 192dpi) {
+  .hero {
+    background-image: url('../images/retina/bg-mobile@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    min-height: 432px;
+
+    background-image: url('../images/retina/bg-tablet.jpg');
+  }
+}
+
+/* 
+screen
+768px +
+2x +
+*/
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .hero {
+    background-image: url('../images/retina/bg-tablet@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1200px;
+    min-height: 675px;
+
+    background-image: url('../images/retina/bg-desktop.jpg');
+  }
+}
+
+/* 
+screen
+1200px +
+2x +
+*/
+@media screen and (min-width: 1200px) and (min-resolution: 192dpi) {
+  .hero {
+    background-image: url('../images/retina/bg-desktop@2x.jpg');
+  }
+}
+
+/* .hero {
   max-width: 1200px;
   min-height: 675px;
   margin-left: auto;
@@ -35,7 +96,7 @@ body {
 
   background-image: url('../images/retina/bg-desktop.jpg');
   background-size: cover;
-}
+} */
 
 .team-section {
   padding: 50px 0;
